# typer-gui

./: .gitignore  CLAUDE.md  CLIPBOARD_AND_OUTPUT_DESIGN.md  CLI_CONCEPT.md  CLI_RICH_CONCEPT.md  DEV.md  DEV_HACKS_ANALYSIS.md  LICENSE  README.md  REFACTORING_CONCEPT.md  REFACTORING_PROPOSAL.md  REFACTOR_STATUS.md  SPEC2.md  SYSTRAY_README.md  debug_tabs.py  pyproject.toml  release.bat  release.py  release.sh  spec.md  systray_example.py  test_checkbox_layout.py  test_control_structure.py  test_dialogs.py  test_flet_row.py  test_list_param.py  test_text_accumulation.py
docs/: AI_CALLS.md  API_VERIFICATION.md  APP_SHELL_ARCHITECTURE_ANALYSIS.md  APP_SHELL_COMPARISON.md  APP_SHELL_DECISIONS.md  ARCHITECTURE_ANALYSIS.md  DEV_NOTE.md  SIMPLE_UI_FLOW.md  SPEC.md  SUB_APP_TABS_CONCEPT.md  UIApp_UICommand_Guide.md
examples/: 00_all_examples.py  01_basic_typer_to_gui.py  02_arguments_and_output.py  03_ui_blocks.py  04_app_control.py  04_customizations.py  05_customizations.py  05_state.py  06_data_table.py  07_sub_applications.py  README.md  basic_gui_runner.py  basic_typer_app.py  e00_all_examples.py  e01_basic_typer_to_gui.py  e02_arguments_and_output.py  e03_ui_blocks.py  e04_app_control.py  e05_state.py  e06_data_table.py  e07_sub_applications.py  test_modal.py  test_modal_flags.py  test_scroll_flags.py  ui_blocks_demo.py
tests/: __init__.py  test_core.py  test_flet_newlines.py
typer2ui/: __init__.py  context.py  data_source.py  hold.py  output.py  spec_builder.py  specs.py  state.py  ui_app.py  ui_blocks.py
typer_gui/: __init__.py  core.py  events.py  flet_ui.py  (+6 more)
(+40 files in other folders)
